@@ -1,6 +1,12 @@
 
 = rufus-jig CHANGELOG.txt
 
+
+== rufus-jig - 0.1.10    released 2010/01/02
+
+- :re_put_ok => false rework (deleting at first)
+
+
 == rufus-jig - 0.1.9    released 2009/12/29
 
 - Couch now handling conflict re-get by itself
